Improve packaging tree